--- a/css/style.css
+++ b/css/style.css
@@ -257,6 +257,45 @@ html, body {
   }
 }
 
+.search {
+  position: relative;
+}
+
+.btn__search {
+  background: none;
+}
+
+.search__img {
+  display: block;
+  box-shadow: none;
+  border: none;
+  cursor: pointer;
+  padding-right: 17.5px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.input__search {
+  width: 170px;
+  height: 23px;
+  font-size: 23px;
+  background: none;
+  position: relative;
+  z-index: -1;
+  opacity: 0;
+  transition-duration: 0.5s;
+  transition-property: opacity;
+}
+
+.search-active input {
+  opacity: 1;
+  z-index: 1;
+}
+.search-active button {
+  display: none;
+}
+
 .footer {
   background-color: rgba(247, 247, 247, 0.603);
 }
