--- a/scss/style.scss
+++ b/scss/style.scss
@@ -40,7 +40,6 @@ html,body{
 	background-size: cover;
 	background-position: center;
 	img{display: none;}
-	
 }
 .header {
 	position: absolute;
@@ -243,10 +242,42 @@ html,body{
 		}
 	}
 }
-
-
-
-
+.header__search {
+}
+.search {
+	position: relative;
+}
+.btn__search {
+	background: none;
+}
+.search__img {
+	display: block;
+	box-shadow: none;
+	border: none;
+	cursor: pointer;
+	padding-right: 17.5px;
+	appearance: none;	
+}
+.input__search {
+	width: 170px;
+	height: 23px;
+	font-size: 23px;
+	background: none;
+	position: relative;
+	z-index: -1;
+	opacity: 0;
+	transition-duration: 0.5s;
+	transition-property: opacity;
+}
+.search-active {
+	input{
+		opacity: 1;
+		z-index: 1;
+	}
+	button{
+		display: none;
+	}
+}
 
 
 
