--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html, body {
 }
 
 .main-screen {
-  flex: 1 0 100%;
+  flex: 1 0 125.16%;
   position: relative;
 }
 .main-screen__bg {
@@ -39,6 +39,16 @@ html, body {
   height: 100%;
   top: 0;
   left: 0;
+}
+.main-screen:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(330.24deg, rgba(0, 0, 0, 0) 31.06%, #000000 108.93%);
 }
 
 .ibg {
@@ -179,6 +189,7 @@ html, body {
   top: 30vh;
   display: flex;
   flex-direction: column;
+  z-index: 3;
 }
 
 .hmdeia__text {
@@ -198,8 +209,10 @@ html, body {
 }
 
 .bigtext {
-  padding-top: 24vh;
-  padding-left: 31.78vw;
+  padding-top: 28.666vh;
+  padding-left: 26.315vw;
+  position: relative;
+  z-index: 2;
 }
 
 .bigtext__body {
@@ -207,7 +220,7 @@ html, body {
   flex-direction: column;
 }
 
-.bigtext__subtitle {
+.subtitle {
   font-weight: 700;
   font-size: 18px;
   line-height: 25px;
@@ -215,6 +228,18 @@ html, body {
   text-transform: uppercase;
   color: #FFC178;
   padding-bottom: 32px;
+  padding-left: 32px;
+}
+.subtitle:before {
+  content: "";
+  position: relative;
+  display: inline-block;
+  top: -7px;
+  left: -22px;
+  z-index: 2;
+  width: 72px;
+  height: 2px;
+  background: #FFC178;
 }
 
 .bigtext__title {
@@ -231,7 +256,8 @@ html, body {
 
 .header__scroll {
   position: relative;
-  text-align: center;
+  z-index: 2;
+  padding-left: 13vw;
   font-weight: 600;
   font-size: 18px;
   line-height: 25px;
@@ -239,7 +265,14 @@ html, body {
 }
 .header__scroll:after {
   content: "";
-  background: url(../img/icon/arrow_downward_24px.svg);
+  position: relative;
+  display: inline-block;
+  background: url(../img/icon/arrow_downward_24px.svg) no-repeat;
+  width: 100%;
+  height: 100%;
+  height: 24px;
+  width: 16px;
+  left: 9px;
 }
 
 .footer {
@@ -298,7 +331,7 @@ html, body {
 }
 
 .generation {
-  background-color: #f7f7f7;
+  background-color: #000;
   padding: 120px 0;
 }
 @media (max-width: 900px) {
