--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ html,body{
 	flex-direction: column;
 }
 .main-screen{
-	flex: 1 0 100%;
+	flex: 1 0 125.16%;
 	position: relative;
 	&__bg {
 		position: absolute;
@@ -34,12 +34,24 @@ html,body{
 		top: 0;
 		left: 0;
 	}
+	&:after{
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: 1;
+		width: 100%;
+		height: 100%;
+		background: linear-gradient(330.24deg, rgba(0, 0, 0, 0) 31.06%, #000000 108.93%);
+	}
 }
 .ibg{
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
-	img{display: none;}
+	img{
+		display: none;
+	}
 }
 .header {
 	position: absolute;
@@ -160,6 +172,7 @@ html,body{
 	top: 30vh;
 	display: flex;
 	flex-direction: column;
+	z-index: 3;
 }
 .hmdeia__text {
 	font-weight: 600;
@@ -179,15 +192,17 @@ html,body{
 .header__main {
 }
 .bigtext {
-	padding-top: 24vh;
-	padding-left: 31.78vw;
+	padding-top: 28.666vh;
+	padding-left: 26.315vw;
+	position: relative;
+	z-index: 2;
 }
 .bigtext__body {
 	display: flex;
 	
 	flex-direction: column;
 }
-.bigtext__subtitle {
+.subtitle {
 	font-weight: 700;
 	font-size: 18px;
 	line-height: 25px;
@@ -195,6 +210,18 @@ html,body{
 	text-transform: uppercase;
 	color: #FFC178;
 	padding-bottom: 32px;
+	padding-left: 32px;
+	&:before{
+		content: '';
+		position: relative;
+		display: inline-block;
+		top: -7px;
+		left: -22px;
+		z-index: 2;
+		width: 72px;
+		height: 2px;
+		background: #FFC178;
+	}
 }
 .bigtext__title {
 	
@@ -210,14 +237,22 @@ html,body{
 }
 .header__scroll {
 	position: relative;
-	text-align: center;
+	z-index: 2;
+	padding-left: 13vw;
 	font-weight: 600;
 	font-size: 18px;
 	line-height: 25px;
 	color: #FFFFFF;
 	&:after{
 		content: '';
-		background: url(../img/icon/arrow_downward_24px.svg);
+		position: relative;
+		display: inline-block;
+		background: url(../img/icon/arrow_downward_24px.svg) no-repeat;
+		width: 100%;
+		height: 100%;
+		height: 24px;
+		width: 16px;
+		left: 9px;
 	}
 }
 
@@ -279,7 +314,7 @@ html,body{
 
 
 .generation {
-	background-color: #f7f7f7;
+	background-color: #000;
 	padding: 120px 0;
 	&__block{}
 	@media (max-width:900px){
