--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,6 @@ html, body {
   min-height: 100%;
 }
 
-.container {
-  max-width: 1130px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
 .page {
   position: absolute;
   width: 100%;
@@ -330,141 +324,121 @@ html, body {
   text-align: right;
 }
 
-.generation {
-  background-color: #000;
-  padding: 120px 0;
-}
-@media (max-width: 900px) {
-  .generation {
-    padding: 80px 0px;
-  }
-}
-@media (max-width: 600px) {
-  .generation {
-    padding: 30px 0px;
-  }
-}
-
 .block {
+  background: #000;
   text-align: center;
 }
-.block__icon {
-  margin: 0px 0px 30px 0px;
-}
-.block__title {
-  color: #353738;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 24px;
-  text-transform: uppercase;
-  letter-spacing: 3.6px;
-  margin: 0px 0px 18px 0px;
-}
-.block__text {
-  color: #848789;
-  font-size: 18px;
-  line-height: 34px;
-  position: relative;
-}
-.block__text_j {
-  text-align: justify;
-  font-size: 16px;
-  line-height: 30px;
-}
-.block__text_j:after {
-  content: "";
-  width: 50px;
-  height: 2px;
-  background-color: #353738;
-  display: block;
-  margin: 15px auto 10px auto;
-}
-
-.brands__content {
-  padding: 40px 35px 15px 35px;
-}
-.brands__image {
-  padding: 0 0 37.51% 0;
-  filter: contrast(1.5);
-}
-@media (max-width: 1100px) {
-  .brands__row {
-    flex-direction: column;
-  }
-  .brands__last .brands__column_1 {
-    order: 2;
-  }
-  .brands__last .brands__column_2 {
-    order: 1;
-  }
-  .brands__last .brands__column_3 {
-    order: 3;
-  }
-}
-.brands__reverse .brands__column {
-  order: 1;
-}
-.brands__reverse .brands__column_b {
-  order: 2;
-}
-
-.brands__row {
+.block__row {
   display: flex;
 }
-
-.brands__column {
-  flex: 0 1 33.333%;
+.block__column {
+  flex: 0 1 50%;
 }
-.brands__column_b {
-  flex: 0 1 66.667%;
-}
-
-.item {
-  height: 100%;
-  display: block;
-  position: relative;
-}
-.item__image {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  filter: contrast(1.5);
-}
-.item__logo {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+.block__item {
+  text-align: left;
+  padding-top: 87px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  z-index: 3;
-  background-color: rgba(113, 182, 154, 0.5);
-  opacity: 0;
-  visibility: hidden;
-  transition: all 1.3s ease 0s;
+  padding-left: 232px;
+  padding: 87px 229.5px 331px 0px;
 }
-.item__logo span {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 700;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 2.8px;
-}
-.item:hover .item__logo {
-  opacity: 1;
-  visibility: visible;
-}
-@media (max-width: 1100px) {
-  .item {
-    height: auto;
-    padding: 0 0 70% 0;
+@media (max-width: 1536px) {
+  .block__item {
+    padding: 40px 100px 150px 100px;
   }
+}
+.block__img {
+  position: relative;
+  z-index: 3;
+  height: 82%;
+  width: 63%;
+  top: -87px;
+  left: 228.5px;
+}
+.block__title {
+  font-weight: 700;
+  font-size: 64px;
+  line-height: 87px;
+  color: #FFFFFF;
+  padding: 27px 0;
+}
+.block__text {
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFFFFF;
+  padding-bottom: 27px;
+}
+
+.read {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 25px;
+  color: #FBD784;
+}
+.read:after {
+  content: "";
+  background: url(../img/icon/arrow_right.svg) no-repeat;
+  display: inline-block;
+  position: relative;
+  left: 9px;
+  top: 5px;
+  width: 28px;
+  height: 18px;
+}
+
+.big {
+  background: #000;
+}
+.big__subbtitle {
+  text-align: center;
+  padding-bottom: 24px;
+  padding-top: 54%;
+}
+.big__subbtitle:after {
+  content: "";
+  position: relative;
+  display: inline-block;
+  top: -7px;
+  right: -22px;
+  z-index: 2;
+  width: 72px;
+  height: 2px;
+  background: #FFC178;
+}
+.big .read {
+  position: relative;
+  text-align: center;
+}
+
+.container {
+  padding: 0 230px;
+}
+
+.big__img {
+  padding: -1px 0 27% 0;
+}
+
+.big__title {
+  text-align: center;
+  padding-top: 24px;
+  font-size: 64px;
+  line-height: 87px;
+  color: #FFFFFF;
+  padding: 0 378px;
+  padding-bottom: 27px;
+}
+
+.big__text {
+  text-align: center;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFFFFF;
+  padding: 0 264px;
+}
+.big__text span {
+  display: block;
 }
 
 .slider {
@@ -509,82 +483,6 @@ html, body {
   }
   .slider__title {
     margin: 0px 0px 15px 0px;
-  }
-}
-
-.shop__body {
-  display: flex;
-}
-.shop__column {
-  flex: 0 1 16.667%;
-}
-.shop__column_b {
-  flex: 0 1 33.333%;
-}
-@media (max-width: 1100px) {
-  .shop__body {
-    flex-wrap: wrap;
-  }
-  .shop__column {
-    flex: 0 1 50%;
-  }
-  .shop__column:first-child, .shop__column:last-child {
-    flex: 1 1 100%;
-  }
-}
-
-.block-shop {
-  height: 100%;
-}
-.block-shop__row {
-  display: flex;
-}
-.block-shop__column {
-  flex: 0 1 50%;
-}
-.block-shop__item {
-  height: auto;
-  padding: 0 0 50% 0;
-}
-.block-shop__item_b {
-  padding: 0 0 200.5% 0;
-}
-.block-shop__item_l {
-  padding: 0 0 100% 0;
-}
-
-.black {
-  height: 200px;
-  background-color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.black__discover {
-  border: 2px solid #fff;
-  background-color: #000;
-  transition: all 0.7s ease 0s;
-}
-.black__discover:hover {
-  background-color: #fff;
-  border: 2px solid #000;
-}
-.black__discover:hover a {
-  color: #000;
-}
-.black__discover a {
-  color: #fff;
-  padding: 20px 60px;
-  display: block;
-}
-@media (max-width: 1100px) {
-  .black {
-    height: 150px;
-  }
-}
-@media (max-width: 767px) {
-  .black {
-    height: 100px;
   }
 }
 
