--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,11 +10,15 @@ html,body{
 	overflow: hidden;
 	min-height: 100%;
 }
-.container{
-	max-width: 1130px;
-	padding: 0 15px;
-	margin: 0 auto;
-}
+// .container{
+// 	padding: 0 228.5px;
+// 	// max-width: 1464px;
+// 	// margin: 0 auto;
+// 	@media(max-width:1400px) {
+// 		padding: 0 100px;
+// 	}
+// }
+
 .page{
 	position: absolute;
 	width: 100%;
@@ -312,151 +316,167 @@ html,body{
 	}
 }
 
-
-.generation {
-	background-color: #000;
-	padding: 120px 0;
-	&__block{}
-	@media (max-width:900px){
-		padding:80px 0px;
-	}
-	@media (max-width:600px){
-		padding:30px 0px;
-	}
-	
+.block__small {
 }
 .block {
+	background: #000;
 	text-align: center;
-	&__icon{
-		margin: 0px 0px 30px 0px;
+	&__row {
+		display: flex;
 	}
-	&__title{
-		color: #353738;
-		font-size: 18px;
-		font-weight: 700;
-		line-height: 24px;
-		text-transform: uppercase;
-		letter-spacing: 3.6px;
-		margin: 0px 0px 18px 0px;
+	&__column{
+		flex:0 1 50%;
 	}
-	&__text{
-		color: #848789;
-		font-size: 18px;
-		line-height: 34px;
-		position: relative;
-		&_j{
-			text-align: justify;
-			font-size: 16px;
-			line-height: 30px;
-			&:after{
-				content: '';
-				width: 50px;
-				height: 2px;
-				background-color: #353738;
-				display: block;
-				margin: 15px auto 10px auto;
-			}
-		}
-	}
-}
-
-
-
-
-
-
-.brands {
-	&__content{
-		padding: 40px 35px 15px 35px;
-	}
-	&__image{
-		padding: 0 0 37.51% 0;
-		filter: contrast(1.5);
-	}
-	@media(max-width: 1100px){
-		&__row{
-			flex-direction: column;
-		}
-		&__last{
-			.brands__column_1{
-				order: 2;
-			}
-			.brands__column_2{
-				order: 1;
-			}
-			.brands__column_3{
-				order: 3;
-			}
-	}
-	}
-	&__reverse{
-		.brands__column{
-			order: 1;
-		}
-		.brands__column_b{
-			order: 2;
-		}
-	}
-
-}
-.brands__row {
-	display: flex;
-
-}
-.brands__column {
-	flex:0 1 33.333%;
-	&_b{
-	flex: 0 1 66.667%;
-	}
-}
-
-.item {
-	height: 100%;
-	display: block;
-	position: relative;
-	&__image{
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		filter: contrast(1.5);
-	}
-	&__logo{
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
+	&__item{
+		text-align: left;
+		padding-top: 87px;
 		display: flex;
 		flex-direction: column;
-		justify-content: center;
-		align-items: center;
+		padding-left: 232px;
+		padding: 87px 229.5px 331px 0px;
+		@media(max-width:1536px) {
+			padding: 40px 100px 150px 100px;
+		}
+	}
+	&__img {
+		position: relative;
 		z-index: 3;
-		background-color: rgba(113, 182, 154, 0.5);
-		opacity: 0;
-		visibility: hidden;
-		transition: all 1.3s ease 0s;
-		span{
-			color: #ffffff;
-			font-size: 14px;
-			font-weight: 700;
-			text-align: center;
-			text-transform: uppercase;
-			letter-spacing: 2.8px;
-		}
+		height: 82%;
+		width: 63%;
+		top: -87px;
+		left: 228.5px;
+		// &:before{
+		// 	content: '';
+		// 	background: linear-gradient(360deg, #000000 0%, rgba(0, 0, 0, 0) 77.78%);
+		// 	width: 306%;
+		// 	height: 12%;
+		// 	position: relative;
+		// 	top: 8px;
+		// 	right: -604px;
+		// 	bottom: 18px;
+		// 	display: block;
+		// 	z-index: 1;
+		// 	overflow: hidden;
+		// 	@media(max-width:1400px) {
+				
+		// 	}		
+		// }
+		// &:after{
+		// 	content: '';
+		// 	background: linear-gradient(360deg, #000000 0%, rgba(0, 0, 0, 0) 77.78%);
+		// 	width: 40%;
+		// 	height: 12%;
+		// 	position: relative;
+		// 	top: -80px;
+		// 	bottom: 18px;
+		// 	display: block;
+		// 	z-index: 1;
+		// 	overflow: hidden;
+		// 	right: 242px;
+		// 	@media(max-width:1400px) {
+
+		// 	}
+		// }
 	}
-	&:hover{
-		.item__logo{
-			opacity: 1;
-			visibility: visible;
-		}
+	
+	&__subbtitle {
+		
 	}
-	@media(max-width: 1100px){
-		height: auto;
-		padding: 0 0 70% 0;
+	&__title {
+		font-weight: 700;
+		font-size: 64px;
+		line-height: 87px;
+		color: #FFFFFF;
+		padding: 27px 0;
+	}
+	&__text {
+		font-weight: 600;
+		font-size: 18px;
+		line-height: 32px;
+		color: #FFFFFF;
+		padding-bottom: 27px;
 	}
 }
+.read {
+	font-weight: 700;
+	font-size: 18px;
+	line-height: 25px;
+	color: #FBD784;
+	&:after{
+		content: '';
+		background: url(../img/icon/arrow_right.svg) no-repeat;
+		display: inline-block;
+		position: relative;
+		left: 9px;
+		top: 5px;
+		width: 28px;
+		height: 18px;
+	}
+}
+
+.block__big {
+	
+}
+.big {
+	background: #000;
+	&__subbtitle {
+		text-align: center;
+		padding-bottom: 24px;
+		padding-top: 54%;
+		&:after {
+			content: '';
+			position: relative;
+			display: inline-block;
+			top: -7px;
+			right: -22px;
+			z-index: 2;
+			width: 72px;
+			height: 2px;
+			background: #FFC178;
+			
+		}
+	}
+	.read {
+		position: relative;
+		text-align: center;
+	}
+}
+.container {
+	padding: 0 230px;
+}
+.big__img {
+	padding: -1px 0 27% 0;
+}
+.ibg {
+	
+}
+.big__title {
+	text-align: center;
+	padding-top: 24px;
+	font-size: 64px;
+	line-height: 87px;
+	color: #FFFFFF;
+	padding: 0 378px;
+	padding-bottom: 27px;
+	
+}
+.big__text {
+	text-align: center;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 32px;
+	color: #FFFFFF;
+	padding: 0 264px;
+	span{
+		display: block;
+	}
+}
+
+
+
+
+
+
 .slider {
 	background-color: #f7f7f7;
 	padding: 120px 0 60px 0;
@@ -503,82 +523,6 @@ html,body{
 		&__title {
 			margin: 0px 0px 15px 0px;
 		}
-	}
-}
-.shop {
-	&__body{
-		display: flex;
-	}
-	&__column{
-		flex: 0 1 16.667%;
-	}
-	&__column_b{
-		flex: 0 1 33.333%;
-	}
-	&__block{
-		
-	}
-	@media(max-width:1100px){
-		&__body{
-			flex-wrap: wrap;
-		}
-		&__column{
-			flex: 0 1 50%;
-			&:first-child,
-			&:last-child{
-				flex: 1 1 100%;
-			}
-		}
-	}
-}
-.block-shop {
-	height: 100%;
-	&__row{
-		display: flex;
-	}
-	&__column{
-		flex: 0 1 50%;
-	}
-	&__item{
-		height: auto;
-		padding: 0 0 50% 0;
-		&_b{
-			padding: 0 0 200.5% 0;
-		}
-		&_l{
-			padding: 0 0 100% 0;
-		}
-	}
-	
-}
-.black {
-	height: 200px;
-	background-color: #000;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	&__discover{
-		border: 2px solid #fff;
-		background-color: #000;
-		transition: all 0.7s ease 0s;
-		&:hover{
-			background-color: #fff;
-			border: 2px solid #000;
-			a{
-				color: #000;
-			}
-		}
-		a{
-			color: #fff;
-			padding: 20px 60px ;
-			display: block;
-		}
-	}
-	@media(max-width:1100px){
-		height: 150px;
-	}
-	@media(max-width:767px){
-		height: 100px;
 	}
 }
 .subscribe {
