--- a/scss/style.scss
+++ b/scss/style.scss
@@ -259,61 +259,6 @@ html,body{
 }
 
 
-
-
-
-
-
-.footer {
-	background-color: rgba(247, 247, 247, 0.603);
-	@media (max-width:1100px){
-		margin: -20px 0;
-	}
-}
-.footer__body {
-	height: 250px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-.footer__info {
-	color: #848789;
-	font-size: 14px;
-	font-style: italic;
-	line-height: 17.87px;
-	text-align: left;
-	.footer__company {
-		font-family: "Lato - Bold";
-		font-size: 16px;
-		font-weight: 700;
-		font-style: normal;
-	}
-}
-.footer__social-network {
-	margin: 0 -7.5px;
-	.twitter {
-		padding: 0 7.5px;
-	}
-	.facebook {
-		padding: 0 7.5px;
-	}
-	.pinterest {
-		padding: 0 7.5px;
-	}
-}
-.footer__logo {
-	color: #848789;
-	font-size: 14px;
-	font-style: italic;
-	line-height: 17.87px;
-	text-align: right;
-	span{
-		padding-right: 5px;
-		text-align: right;
-		
-	}
-}
-
 .block__small {
 	padding-bottom: 250px;
 	@media(max-width: 1400px) {
@@ -493,10 +438,6 @@ html,body{
 }
 
 
-
-
-
-
 .slider {
 	background-color: #f7f7f7;
 	padding: 120px 0 60px 0;
@@ -616,13 +557,179 @@ html,body{
 	}
 }
 
+.footer {
+	&__body {
+		background-color: #000;
+		color: #fff;
+	}
+}
+.fh__row {
+	position: relative;
+	display: flex;
+	justify-content: space-between;
+	&:after {
+		content: '';
+		position: absolute;
+		top: 125px;
+		display: block;
+		width: 100%;
+		height: 1.38px;
+		background: #FFFFFF;
+		mix-blend-mode: normal;
+		opacity: 0.3;
+	}
+}
+.footer__header {
+	padding-bottom: 104px;
+	
+}
+.footer__logo {
+	font-weight: 700;
+	font-size: 48px;
+	line-height: 65px;
+	letter-spacing: 0.01em;
+	text-transform: capitalize;
+
+}
+.footer__form {
+	display: flex;
+}
+.footer__question {
+	position: relative;
+	top: 20px;
+	font-size: 22px;
+	line-height: 29px;
+	letter-spacing: -0.3px;
+	padding-right: 55px;
+}
+.footer__btn {
+	background-color: #FFA343;
+	border-radius: 8px;
+	font-weight: 700;
+	font-size: 17px;
+	line-height: 22px;
+	padding: 24px 70px;
+}
+
+.f-main {
+	display: flex;
+	&__text{
+		font-weight: 700;
+		font-size: 36px;
+		line-height: 49px;
+		letter-spacing: -0.3px;
+		span{
+			display: block;
+		}
+		padding-bottom: 69px;
+	}
+	&__row {
+		display: flex;
+	}
+	padding-bottom: 136px;
+}
+.f-main__form {
+	position: relative;
+	width: 400px;
+	margin-right: 250px;
+	&:after {
+		content: '';
+		position: absolute;
+		bottom: 23px;
+		display: block;
+		width: 100%;
+		height: 1.38px;
+		background: #FFFFFF;
+		mix-blend-mode: normal;
+		opacity: 0.3;
+	}
+}
+.f-main__mail {
+	display: flex;
+	button {
+		padding:23px 30px;
+		border-radius: 8px 8px 0px 0px;
+	}
+}
+.email {
+	width: 82.5%;
+	background-color: #000;
+	font-size: 15px;
+	line-height: 20px;
+	letter-spacing: -0.204545px;
+	color: #FFFFFF;
+	mix-blend-mode: normal;
+	opacity: 0.5;
+}
 
 
+.f-main__body {
+	display: flex;
+	padding-top: 34px;
+}
+.f-main__services {
+	display: flex;
+	flex-direction: column;
+}
+.main-link {
+	display: block;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: 0px;
+	letter-spacing: -0.231818px;
+	color: #FFD1A0;
+	padding-bottom: 45px;
+}
+.link {
+	display: block;
+	font-size: 19px;
+	line-height: 0px;
+	letter-spacing: -0.204545px;
+	color: #FFFFFF;
+	padding-bottom: 45px;
+}
+.f-main__about {
+	display: flex;
+	flex-direction: column;
+	padding: 0 185px;
+}
+.f-main__help {
+	display: flex;
+	flex-direction: column;
+}
 
+.ff__header {
+	display: flex;
+	justify-content: space-between;
+}
+.ff__info {
+	display: flex;
+}
+.info {
+	display: block;
+	font-weight: 400;
+	font-size: 15px;
+	line-height: 20px;
+	letter-spacing: -0.204545px;
+	color: #FFFFFF;
+	padding-right: 50px;
 
-
-
-
+}
+.ff__socialnetworks {
+}
+.ff__social {
+	padding-left: 52px;
+}
+.ff__footer {
+	padding-top: 157px;
+	padding-bottom: 120px;
+	font-weight: 600;
+	font-size: 18px;
+	line-height: 32px;
+	text-align: center;
+	color: #FFFFFF;
+	opacity: 0.5;
+}
 
 
 
